Fix sxt-max-sm map view on firefox

--- a/web-ui/src/main/resources/catalog/views/sextant/api.css
+++ b/web-ui/src/main/resources/catalog/views/sextant/api.css
@@ -221,6 +221,7 @@ yx-axis
 .gn > div:only-child,
 .g > div:only-child {
   height: 100%;
+  display: table-row;
 }
 .gn button,
 .g button {
