--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -11,6 +11,7 @@
   }
   & > div:only-child {
     height: 100%;
+    display: table-row;
   }
   button {
     text-shadow: none;
